--- a/package.json
+++ b/package.json
@@ -8,30 +8,40 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/hooks": "^2.6.0",
-    "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.8.0",
-    "@react-navigation/native": "^5.7.3",
-    "@react-navigation/stack": "^5.9.0",
-    "apisauce": "^1.1.2",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
-    "formik": "^2.1.5",
+    "@bugsnag/expo": "^7.1.1",
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/netinfo": "5.5.1",
+    "@react-navigation/bottom-tabs": "^5.4.4",
+    "@react-navigation/native": "^5.3.2",
+    "@react-navigation/stack": "^5.3.5",
+    "apisauce": "^1.1.1",
+    "dayjs": "^1.8.28",
+    "expo": "~37.0.3",
+    "expo-blur": "~8.1.0",
+    "expo-constants": "^9.0.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-location": "~8.1.0",
+    "expo-permissions": "~8.1.0",
+    "expo-secure-store": "~8.1.0",
+    "formik": "^2.1.4",
     "jwt-decode": "^2.2.0",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "lottie-react-native": "~2.6.1",
+    "moment": "^2.26.0",
+    "react": "~16.9.0",
+    "react-dom": "~16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-expo-image-cache": "^4.1.0",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.9.0",
-    "react-native-safe-area-context": "~3.0.7",
-    "react-native-screens": "~2.9.0",
+    "react-native-progress": "^4.1.2",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
     "react-native-web": "~0.11.7",
-    "yup": "^0.29.3",
-    "expo-secure-store": "~9.0.1"
+    "yup": "^0.28.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "~8.1.0",
+    "@babel/core": "^7.8.6"
   },
   "private": true
 }
